load locations to map

--- a/project.json
+++ b/project.json
@@ -16,5 +16,6 @@
   "tags": [],
   "image": "assets/social.jpg",
   "production": false,
-  "embedded": true
+  "embedded": true,
+  "sheets": ["1g91k4D2OXkuZGlC681F9NVKGRi_KNcIgwlKkKtfTJTU"]
 }
